[package]
name = "wgpu-bilinear-interpolation"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/solace-lee/offscreen-renderer"
description = "一个使用 wgpu 进行图像渲染的 Rust 库"
license = "MIT"
authors = ["solace-lee <<solace.lee@outlook.com>>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# 使用最新的稳定版 24.0
wgpu = { version = "27.0", features = ["webgpu"] }
bytemuck = { version = "1.24", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Navigator", "Window", "HtmlCanvasElement"] }
# 用于处理异步回调
futures-intrusive = "0.5"